--- a/src/app/page_users/about-user/about-user.component.html
+++ b/src/app/page_users/about-user/about-user.component.html
@@ -56,10 +56,10 @@
       <div class="container" data-aos="fade-up">
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
-            <img src="https://vipenglish.edu.vn/wp-content/uploads/2018/07/khoa-hoc-tieng-anh-online-cho-hoc-sinh-cap-2-2.jpg" class="img-fluid" alt="">
+            <img style="height: 300px; width: 700px;" src="https://ise.edu.vn/wp-content/uploads/2021/04/cach-hoc-ngu-phap-tieng-anh-cap-toc-4-min-1-1-min.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
-            <h3>Sứ mệnh & Tầm nhìn</h3>
+            <!-- <h3>Sứ mệnh & Tầm nhìn</h3>
             <p class="fst-italic">Sứ mệnh</p>
             <ul>
               <li>
@@ -74,7 +74,15 @@
                 <i class="bi bi-check-circle"></i> Cùng tạo dựng cho thế hệ trẻ Việt Nam nền tảng ngôn ngữ vững vàng cùng sự tự tin để sẵn sàng tiếp cận tri thức, phát triển bản thân và hội nhập.
               </li>
               <li><i class="bi bi-check-circle"></i> Các kỹ năng quan trọng của thế kỷ 21 luôn luôn được ưu tiên giúp học viên xây dựng hành trang  ngôn ngữ vững chắc để tự tin vươn ra thế giới</li>
-            </ul>
+            </ul> -->
+            Trung tâm Anh ngữ HSK là cơ sở chuyên giảng dạy Tiếng Anh học thuật được thành lập vào năm 2006
+            tại  39 Mậu Thân, Xuân Khánh, Ninh Kiều, Cần Thơ. Tự hào là trung tâm đào tạo tiếng Anh có uy tín
+            nhất tại Cần Thơ, Trung tâm Anh ngữ HSK có đa dạng các chương trình đào tạo dành cho học viên từ
+            04 tuổi trở lên, bao gồm: Chương trình Tiếng Anh Thiếu nhi; Chương trình Tiếng Anh Thiếu niên;
+            Luyện thi IELTS; Luyện thi TOEFL – TOEIC – Test Prep; Tiếng Anh Căn bản – Tiếng Anh Giao tiếp – Tiếng Anh
+            dành cho người đi làm; Tiếng Anh Doanh nghiệp, Kỹ năng mềm bằng Tiếng Anh. HSK định hướng giáo dục phát triển
+            con người toàn diện, bằng và thông qua TIẾNG ANH, trở thành những công dân TOÀN CẦU và THÀNH ĐẠT, có trách nhiệm
+            với BẢN THÂN và CỘNG ĐỒNG.
           </div>
         </div>
 
