--- a/src/app/page_users/exam-student-result/exam-student-result.component.html
+++ b/src/app/page_users/exam-student-result/exam-student-result.component.html
@@ -4,7 +4,7 @@
 
   <section id="hero-child"  class="d-flex justify-content-center align-items-center">
     <div class="container position-relative" data-aos="zoom-in" data-aos-delay="100">
-      <h1>TIẾN TRÌNH HỌC TẬP</h1>
+      <h1>KẾT QUẢ HỌC TẬP</h1>
     </div>
   </section>
     <main id="main">
