--- a/src/app/page_users/register/register.component.html
+++ b/src/app/page_users/register/register.component.html
@@ -60,7 +60,7 @@
                     <input [(ngModel)]="register.phone" type="text" name="phone" id="phone" class="form-control" placeholder="Số điện thoại" />
                   </div>
                   <div class="form-outline mb-4">
-                    <input [(ngModel)]="register.birthday" type="text" name="phone" id="phone" class="form-control" placeholder="Ngày sinh" />
+                    <input type="datetime-local" [(ngModel)]="register.birthday" type="text" name="phone" id="phone" class="form-control" placeholder="Ngày sinh" required/>
                   </div>
                   <div class="form-outline mb-4">
                     <input [(ngModel)]="register.username" type="email" name="username" id="username" class="form-control" placeholder="Email" />
