--- a/src/app/layouts/navbar/navbar.component.html
+++ b/src/app/layouts/navbar/navbar.component.html
@@ -11,10 +11,10 @@
         </div>
 
         <div class="side-content">
-            <div class="profile">
+            <!-- <div class="profile">
                 <div class="profile-img bg-img" style="background-image: url(../../../assets/img/3.jpeg)"></div>
                 <h4>Đồng Thư</h4>
-            </div>
+            </div> -->
 
             <div class="side-menu">
                 <ul>
@@ -66,12 +66,12 @@
                            <small>Quản lý thu chi</small>
                        </a>
                    </li>
-                   <li class="nav-item">
+                   <!-- <li class="nav-item">
                     <a class="nav-link" routerLink="/report">
                          <span class="las la-clipboard-list"></span>
                          <small>Báo cáo</small>
                      </a>
-                 </li>
+                 </li> -->
                 </ul>
             </div>
         </div>
