--- a/src/app/page_users/home-user/home-user.component.html
+++ b/src/app/page_users/home-user/home-user.component.html
@@ -167,7 +167,7 @@
                   <tr >
                     <th><span class="las la-sort"></span> CHƯƠNG TRÌNH</th>
                     <th><span class="las la-sort"></span> CẤP ĐỘ</th>
-                    <th><span class="las la-sort"></span> HỌC PHÍ</th>
+                    <!-- <th><span class="las la-sort"></span> HỌC PHÍ</th> -->
                     <!-- <th><span class="las la-sort"></span> LỊCH HỌC</th> -->
                     <th><span class="las la-sort"></span> NGÀY KHAI GIẢNG</th>
                     <!-- <th><span class="las la-sort"></span> THỜI LƯỢNG KHÓA</th> -->
@@ -182,9 +182,9 @@
                     <td>
                         {{course?.level}}
                     </td>
-                    <td>
+                    <!-- <td>
                         {{course?.price | currency:'VND'}}
-                    </td>
+                    </td> -->
                     <!-- <td>
                       {{course?.schedule}}
                     </td> -->
