--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -29,7 +29,7 @@
               </div> -->
 
               <div class="user">
-                  <div class="bg-img" style="background-image: url(../../../assets/img/3.jpeg)"></div>
+                  <!-- <div class="bg-img" style="background-image: url(../../../assets/img/3.jpeg)"></div> -->
 
                   <span class="las la-power-off"></span>
                   <span (click)="handleLogout()">Logout</span>
